# TacticsVictory

./: .gitattributes  .gitignore  1.map  2.map  LICENSE  README.md  TacticsVictory.sln  TacticsVictory.vcxproj  TacticsVictory.vcxproj.filters  commit.sh  copy_to_archive.py  input.map  input.txt  log.txt  settings.xml  tank  ui.xml
TacticsVictory/: CMakeLists.txt
TacticsVictory/common/Battle/: Battle.cpp  Battle.h  BattleHandlers.cpp  CMakeLists.txt  GameState.cpp  GameState.h  GameWorld.cpp  GameWorld.h  PeriodicTasks.cpp  PeriodicTasks.h  PiResWindows.aps  PiResWindows.rc  Settings.cpp  Settings.h  TVBattle.cpp  TVBattle.h  TVBattleHandlers.cpp  defines.cpp  defines.h  stdafx.cpp  stdafx.h
TacticsVictory/common_files/: defines_.h
TacticsVictory/common_files/Objects/: GameObjectParameters_.cpp  GameObjectParameters_.h  GameObjectTypes_.h  GameObject_.cpp  GameObject_.h  PoolObjects_.cpp  PoolObjects_.h
TacticsVictory/common_files/System/: Events_.cpp  Events_.h
TacticsVictory/common_files/Utils/: Array2D_.cpp  Log_.cpp  Log_.h  Math_.cpp  Math_.h  PeriodicTask_.cpp  PeriodicTask_.h
TacticsVictory/local/Battler/: CMakeLists.txt  DeferredTasks.cpp  DeferredTasks.h  GameState.cpp  GameState.h  GameWorld.cpp  PeriodicTasks.cpp  PeriodicTasks.h  PiResWindows.rc  Settings.h  TVBattler.cpp  TVBattler.h  TVBattlerHandlers.cpp  defines.h  stdafx.h
src/: CMakeLists.txt  CopyToDirEXE.cmake  GlobalFunctions.cpp  GlobalFunctions.h  GlobalVars.cpp  GlobalVars.h  Install.cmake  LogRTS.h  RuntimeLibrary.cmake  Settings.cpp  Settings.h  SettingsTypes.h  TacticsVictory.cpp  TacticsVictory.h  TacticsVictoryHandlers.cpp  TacticsVictoryHandlers.h  defines.h  stdafx.h
src/Core/: Camera.cpp  Camera.h  Math.cpp  Math.h  Mutex.cpp  Mutex.h  Structures.h
src/Editor/: Editor.cpp  Editor.h
src/GUI/: Cursor.cpp  Cursor.h  GUI.cpp  GUI.h
src/GUI/Controls/: ButtonSwitch.h  ButtonToggled.h  GovernorFloat.cpp  GovernorFloat.h  Hint.cpp  Hint.h  Label.cpp  Label.h  SliderWithTextAndButtons.h
src/GUI/Elements/: Button.cpp  Button.h  ButtonMain.cpp  ButtonMain.h  ButtonSwitch.cpp  ButtonSwitch.h  ButtonToggled.cpp  ButtonToggled.h  Cursor.cpp  Cursor.h  CursorShapes.cpp  CursorShapes.h  DropDownListWithTextAndButton.cpp  DropDownListWithTextAndButton.h  GovernorFloat.cpp  GovernorFloat.h  Hint.cpp  Hint.h  Image.cpp  Image.h  Label.cpp  Label.h  Panel.cpp  Panel.h  Slider.cpp  Slider.h  SliderInt.cpp  SliderInt.h  SliderWithTextAndButtons.cpp  SliderWithTextAndButtons.h  Tab.cpp  Tab.h  Window.cpp  Window.h
src/GUI/GuiEditor/: GuiEditor.cpp  GuiEditor.h  WindowNewMap.cpp  WindowNewMap.h
src/GUI/GuiGame/: ContextMenuUnit.cpp  ContextMenuUnit.h  GuiGame.cpp  GuiGame.h  WindowTarget.cpp  WindowTarget.h
src/GUI/Logic/: LineTranslator1D.cpp  LineTranslator1D.h  LineTranslator2D.cpp  LineTranslator2D.h
src/GUI/Menu/: Console.cpp  Console.h  ConsoleParser.cpp  ConsoleParser.h  Menu.cpp  Menu.h  MenuConfirmExit.cpp  MenuConfirmExit.h  MenuEvents.h  MenuGame.h  MenuMain.cpp  MenuMain.h  MenuOptions.cpp  MenuOptions.h  MenuRTS.h  PanelBottom.cpp  PanelBottom.h  PanelMain.cpp  PanelMain.h  PanelMap.cpp  PanelMap.h  WindowConfirmExit.cpp  WindowConfirmExit.h  WindowVariables.cpp  WindowVariables.h
src/GUI/MenuEditor/: MenuEditor.cpp  MenuEditor.h
src/GUI/MenuGame/: MenuGame.cpp  MenuGame.h
src/GUI/Panels/: PanelBottom.cpp  PanelMap.cpp  PanelMap.h
src/Game/: Level.cpp  Level.h  Particles.cpp  Particles.h  PathIndicator.cpp  PathIndicator.h  Scene.cpp  Scene.h  Sounds.cpp  Sounds.h
src/Game/Logic/: Movinator.cpp  Movinator.h  Rotator.cpp  Rotator.h  TargetDetected.cpp  TargetDetected.h  Translator.cpp  Translator.h
src/Game/Objects/: DynamicObject.h  GameObject.cpp  GameObject.h  GameObjectEvents.h  Missile.cpp  Missile.h  MovingObject.cpp  Object.cpp  Object.h  Plane.cpp  Plane.h  Plane_.cpp  Plane_.h  Scene.cpp  Scene.h  T-34-76-2.cpp  T-34-76-2.h  Tank.cpp  Tank.h  Terrain.cpp  Terrain.h  TerrainBlock.cpp  TerrainBlock.h  TerrainSegment.cpp  TerrainSegment.h  Triangle.cpp  Triangle.h  _DynamicObject.cpp  _MovingObject.h  _Object.cpp  _Object.h  _StaticObject.cpp  _StaticObject.h
src/Game/Path/: Path.cpp  Path.h  PathIndicator.cpp  PathIndicator.h  PathSegment.cpp  PathSegment.h  PathWave.cpp  PathWave.h  TilePath.cpp  TilePath.h  WaveAlgorithm.cpp  WaveAlgorithm.h  _TilePath.cpp  _TilePath.h
src/Graphics/Objects/: Line.cpp  Line.h  Plane.cpp  Plane.h  Triangle.cpp  Triangle.h
src/Network/: Client.h  VectorBufferRTS.h
src/common/Battle/: Battle.cpp  Battle.h  BattleHandlers.cpp  CMakeLists.txt  glob.cpp  glob_engine.h  glob_game.h  stdafx.h
src/common/BattleTV/: Battle.cpp  Battle.h  BattleHandlers.cpp  CMakeLists.txt  TBattle.cpp  TBattle.h  TBattleHandlers.cpp  defines.h  glob.cpp  glob_engine.h  glob_game.h  stdafx.h
src/common/Configurator/: CMakeLists.txt  stdafx.h
src/common/Controller/: CMakeLists.txt  Controller.cpp  globals.cpp  globals.h  main.cpp  main_controller.cpp  stdafx.cpp  stdafx.h
src/common/Hall/: CMakeLists.txt
src/common/LivingRoom/: CMakeLists.txt  LivingRoom.cpp  LivingRoom.h  globals.cpp  globals.h  main.cpp  main_livingroom.cpp  stdafx.h
src/common/Monitor/: CMakeLists.txt  Monitor.cpp  globals.cpp  globals.h  stdafx.h
src/common/Uploader/: CMakeLists.txt  Uploader.cpp  globals.cpp  globals.h  main_uploader.cpp  stdafx.h
src/common_files/: _defines.h  defines_.h
src/common_files/Core/: Math_.cpp  Math_.h  Structures_.cpp  Structures_.h  TMath_.cpp  TStructures_.h  _Log.cpp  _Math.cpp  _Math.h  _Structures.cpp  _Structures.h  _TMath.cpp  _TStructures.cpp  _TStructures.h
src/common_files/FileSystem/: ConfigurationFile_.cpp  ConfigurationFile_.h  FileSystem_.cpp  FileSystem_.h
src/common_files/GUI/: Cursor_.cpp  Cursor_.h  GUI_.cpp  GUI_.h  Mutator_.cpp  Mutator_.h  TGUIEvents.h
src/common_files/Graphics/: Renderer_.cpp
src/common_files/Input/: Mouse_.cpp  Mouse_.h
src/common_files/Network/: VectorBufferRTS.cpp  _Client.h  _ClientFunctions.cpp  _ClientFunctions.h  _Server.h  _ServerFunctions.h  (+2 more)
src/doc/: Objects.txt  Игра.docx
(+2094 files in other folders)
